tests/invalid/import_from_inside_if/main.py
def main() -> None:
    if True:
        from imports import module_a
